--- a/src/main/webapp/WEB-INF/view/index/index.html
+++ b/src/main/webapp/WEB-INF/view/index/index.html
@@ -3,12 +3,27 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>xxkxxy</title>
+    <script type="text/javascript" src="/source/js/jquery-2.2.3.min.js"></script>
 </head>
 <body>
 
 <div>
     可以启动
 </div>
-
+<div>
+    <script>
+        function login() {
+            $("#loginForm").submit();
+        }
+    </script>
+    <!--Body-->
+    <form action="/login.do" method="post" id="loginForm">
+        <div>用户名:<input type="text" name="username"></div>
+        <div>密码:<input type="password" name="password"></div>
+        <div>
+            <button type="button" onclick="login();">Login</button>
+        </div>
+    </form>
+</div>
 </body>
 </html>
