--- a/src/main/resources/views/index/index.html
+++ b/src/main/resources/views/index/index.html
@@ -19,14 +19,18 @@
     <div class="full-bg-img flex-center">
         <ul class="animated fadeInUp">
             <li>
-                <h1 class="h1-responsive">正在组件中。。。</h1></li>
+                <h1 class="h1-responsive">小小康</h1>
+            </li>
             <li>
-                <p>内部使用。。。！=。=！</p>
+                <h1 class="h1-responsive">小小云</h1>
+            </li>
+            <li>
+                <p>我们的爱河。。。=。= ~~~</p>
             </li>
             [#if user??]
-                <li>
-                    <a target="_self" href="/content/list.do" class="btn btn-primary btn-lg">笔记列表</a>
-                </li>
+            <li>
+                <a target="_self" href="/content/list.do" class="btn btn-primary btn-lg">笔记列表</a>
+            </li>
             [/#if]
         </ul>
     </div>
