--- a/src/main/resources/views/content/add.html
+++ b/src/main/resources/views/content/add.html
@@ -20,7 +20,7 @@
 
 <div class="container">
     <div style="height: 100px;"></div>
-    <form action="/content/save.do" method="post" id="saveForm">
+    <form action="/content/save" method="post" id="saveForm">
         <div class="md-form">
             <i class="fa fa-header prefix"></i>
             <input type="text" id="form2" name="title" class="form-control">
