--- a/src/main/resources/views/include/navbar.html
+++ b/src/main/resources/views/include/navbar.html
@@ -36,12 +36,12 @@
             <script>
                 function login() {
                     var username = $("#form2");
-                    if ($.trim(username.val()) == '') {
+                    if ($.trim(username.val()) === '') {
                         alert("请填写用户名");
                         return false;
                     }
                     var password = $("#form3");
-                    if($.trim(password.val())==''){
+                    if ($.trim(password.val()) === '') {
                         alert("请输入密码");
                         return false;
                     }
@@ -49,7 +49,7 @@
                 }
             </script>
             <!--Body-->
-            <form action="/login.do" method="post" id="loginForm">
+            <form action="/login" method="post" id="loginForm">
                 <div class="modal-body">
                     <div class="md-form">
                         <i class="fa fa-envelope prefix"></i>
