--- a/src/main/resources/views/index/index.html
+++ b/src/main/resources/views/index/index.html
@@ -29,7 +29,7 @@
             </li>
             [#if user??]
             <li>
-                <a target="_self" href="/content/list.do" class="btn btn-primary btn-lg">笔记列表</a>
+                <a target="_self" href="/content/list" class="btn btn-primary btn-lg">笔记列表</a>
             </li>
             [/#if]
         </ul>
