--- a/src/main/resources/views/index/index.html
+++ b/src/main/resources/views/index/index.html
@@ -25,7 +25,7 @@
                 <h1 class="h1-responsive">小小云</h1>
             </li>
             <li>
-                <p>我们的爱河。。。=。= ~~~</p>
+                <p><a href="/love/timeLine">我们的爱河。。。=。= ~~~(tips:快点击我们吧！期待呢)</a></p>
             </li>
             [#if user??]
             <li>
